--- a/index.html
+++ b/index.html
@@ -9,45 +9,46 @@
     <div class="mainbox">
         <div class="title-box">
             <div class="profile-img">
-            <img src="img/ataho.jpg" width="80px" alt="사진">
+            <img src="img/donghee.jpg" width="80px" alt="사진">
         </div>
         <h1>김동희</h1>
         <p class="name-text">김동희 개발자</p>
     </div>
         <section>
             <h2>ABOUT ME</h2>
-            <P class="about-me-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet eum similique nulla blanditiis et consectetur, nostrum corrupti perspiciatis eligendi? Eveniet dolorem debitis aliquam laboriosam, autem nemo ut in velit nihil.</P>
+            <P class="about-me-text">나의 삶의 가치관</br>
+                '주어진 상황에 불평 불만 없이 긍정적으로 생각한다'</P>
         </section>
         <section>
             <h2>Projects</h2>
             <div class="float-wrap">
-            <p class="title-text">프로젝트 1</p>
-            <p class="year-text">2021</p>
+            <p class="title-text">아르바이트</p>
+            <p class="year-text">2016 ~ 2021</p>
         </div>
-            <p class="desc-text">Front Web Developer</p>
-            <div class="pdesc-subtext">HTML, CSS, JS, jQuery</div>
+            <p class="desc-text">경력</p>
+            <div class="pdesc-subtext">광명동굴,GS25,1943,피시방</div>
             <div class="float-wrap">
 
-                <p class="title-text">프로젝트 2</p>
-                <p class="year-text">2020</p>
+                <p class="title-text">군입대</p>
+                <p class="year-text">2018 ~ 2019</p>
             </div>
-                <p class="desc-text">App Developer</p>
-                <div class="pdesc-subtext">java, Android</div>
+                <p class="desc-text">육군</p>
+                <div class="pdesc-subtext">강원도 고성 22사단 직할대</div>
         </section>
         <section>
             <h2>Activities</h2>
             <div class="float-wrap">
-            <p class="title-text">활동 1</p>
-            <p class="year-text">2020 ~ 2021</p>
+            <p class="title-text">대림대학교 입학</p>
+            <p class="year-text">2017 ~ 2021</p>
         </div>
-            <p class="desc-text">활동 1에 대한 설명1</p>
-            <div class="pdesc-subtext">활동 1에 대한 설명2</div>
+            <p class="desc-text">현재 2학년 1학기 재학중</p>
+            <div class="pdesc-subtext"></div>
             <div class="float-wrap">
-                <p class="title-text">활동 2</p>
-                <p class="year-text">2020</p>
+                <p class="title-text">자격증</p>
+                <p class="year-text">2021 ~ 2022</p>
             </div>
-                <p class="desc-text">활동 2에 대한 설명 1</p>
-                <div class="pdesc-subtext">활동 2에 대한 설명 2</div>
+                <p class="desc-text">자격증 준비</p>
+                <div class="pdesc-subtext">정보처리 산업기사 계획</div>
         </section>
         <div class="sns-wrap">
             <a href="http://facebook.com">
